<?xml version="1.0"?>
<package>
  <name>agv2_gazebo</name>
  <version>0.0.0</version>
  <description>agv2_gazebo</description>

  <author>İnovasyon Mühendislik</author>
  <maintainer email="bilgi@inovasyonmuhendislik.com">İnovasyon Mühendislik</maintainer>
  <license>Apache 2.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>message_generation</build_depend>

  
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>message_generation</run_depend>

</package>
