<?xml version="1.0"?>
<package format="2">
  <name>agvsim_v2_start</name>
  <version>0.0.0</version>
  <description>The agvsim_v2_start package</description>

  <maintainer email="hakan.gencturk@inovasyonmuhendislik.com">Hakan GENCTURK</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    
  </export>
</package>
